GNOME Bugzilla – Bug 770262
Rhythmbox GIR Bindings Broken With 3.4 (rb_application_add_accelerator)
Last modified: 2016-08-24 17:05:21 UTC
Created attachment 333973 [details] [review] rb-application: Ensure paramater nullability is known to bindings TL;DR The "variant" parameter isn't nullable in rb_application_add_accelerator, and Python dies when trying to invoke it with 'None' Noticed in rhythmbox alternative-toolbar: https://github.com/fossfreedom/alternative-toolbar
Review of attachment 333973 [details] [review]: pushed as commit 50fb6ff, thanks
Thanks for merging so quickly :)