rb-application: Ensure paramater nullability is known to bindings

Currently the bindings are led to believe this parameter is not allowed to
recieve null values, which will break Pythonic extensions using the
rb_application_add_accelerator function via GObject Introspection

https://bugzilla.gnome.org/show_bug.cgi?id=770262

Signed-off-by: Ikey Doherty <michael.i.doherty@intel.com>